Add one to many user-tasks mapping Add ability to query tasks by user who created them Separate 2 end points; one for admin to view all tasks and another for individual user tasks